[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-aliyun"
dynamic = ["version"]
description = "Aliyun implementation for LiveKit Agents"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "livekit-agents>=1.5.1",
    "aiohttp>=3.10.0",
]

[tool.hatch.version]
path = "livekit/plugins/aliyun/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { livekit-agents = "0 days" }
